--- a/ColorPicker/ColorPicker-Info.plist
+++ b/ColorPicker/ColorPicker-Info.plist
@@ -27,7 +27,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>LSUIElement</key>
-	<true/>
+	<false/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011 DibiStore. All rights reserved.</string>
 	<key>NSMainNibFile</key>
