I hate Apple sometimes

--- a/ColorPicker/Color Picker-Info.plist
+++ b/ColorPicker/Color Picker-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>APPL.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.oscardelben.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.fructivity.colorpickerpro</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
